# Small-ML-Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MLCore/: CMakeLists.txt
MLCore/include/mlcore/: config.h
MLCore/include/mlcore/autograd/: gradfn_diagnostics.txt  gradientFn.h  gradientFn.inl  gradientUtils.h  gradientUtils.inl
MLCore/include/mlcore/autograd/functions/: addGradFn.h  divGradFn.h  matMulGradFn.h  mulGradFn.h  subGradFn.h
MLCore/include/mlcore/autograd/functions/activation/: leakyReluGradFn.h  sigmoidGradFn.h  tanhGradFn.h
MLCore/include/mlcore/autograd/functions/activations/: activationGradFn.h  activationGradFn.inl  reluGradFn.h  softmaxGradFn.h
MLCore/include/mlcore/autograd/functions/broadcast/: broadcastGradFn.h  broadcastGradFn.inl
MLCore/include/mlcore/autograd/functions/elementwise/: addGradFn.h  divGradFn.h  elementwiseGradFn.h  elementwiseGradFn.inl  mulGradFn.h  negateGradFn.h  powerGradFn.h  squareGradFn.h  subGradFn.h
MLCore/include/mlcore/autograd/functions/linearAlgebra/: dotGradFn.h  linalgGradFn.h  linalgGradFn.inl  matMulGradFn.h  transposeGradFn.h
MLCore/include/mlcore/autograd/functions/loss/: bceGradFn.h  ceGradFn.h  lossGradFn.h  lossGradFn.inl  maeGradFn.h  mseGradFn.h
MLCore/include/mlcore/autograd/functions/reduction/: axisSumGradFn.h  maxGradFn.h  meanGradFn.h  minGradFn.h  reductionGradFn.h  (+2 more)
MLCore/include/mlcore/data/: dataLoader.h  dataLoader.inl  dataset.h  tensorDataset.h  tensorDataset.inl
MLCore/include/mlcore/memory/: allocator.h  allocator.inl  storage.h
MLCore/include/mlcore/module/: linearLayer.h  linearLayer.inl  module.h  module.inl  sequential.h  sequential.inl  tanhLayer.h  tanhLayer.inl
MLCore/include/mlcore/module/layers/: activationLayers.h  activationLayers.inl  layers.h  leakyReluLayer.h  leakyReluLayer.inl  linearLayer.h  linearLayer.inl  reluLayer.h  reluLayer.inl  sigmoidLayer.h  sigmoidLayer.inl
MLCore/include/mlcore/operations/: elementwise.h  operations.h
MLCore/include/mlcore/operations/activations/: activation.h  activation.inl
MLCore/include/mlcore/operations/broadcast/: broadcast.h  broadcast.inl
MLCore/include/mlcore/operations/elementwise/: elementwise.h  elementwise.inl
MLCore/include/mlcore/operations/linearAlgebra/: linalg.h  linalg.inl
MLCore/include/mlcore/operations/loss/: loss.h  loss.inl
MLCore/include/mlcore/operations/reduction/: reduction.h  reduction.inl
MLCore/include/mlcore/operations/scalar/: scalar.h  scalar.inl
MLCore/include/mlcore/optimizers/: adam.h  adam.inl  optimizer.h  optimizer.inl  optimizers.h  parameterGroup.h  sgd.h  sgd.inl
MLCore/include/mlcore/parameters/: initialization.h  initialization.inl  parameter.h
MLCore/include/mlcore/schedulers/: expLR.h  lrScheduler.h  schedulers.h  stepLR.h
MLCore/include/mlcore/serialization/: binaryArchive.h  binaryArchive.inl  checkpoint.h  checkpoint.inl
MLCore/include/mlcore/tensor/: dataType.h  tensor.h  tensor.inl
MLCore/include/mlcore/training/: trainer.h  trainer.inl
MLCore/include/mlcore/utils/: shape.h  shape.inl
MLCore/src/mlCore/: mlCore.cpp
MLCore/src/mlcore/memory/: allocator.cpp
MLCore/src/mlcore/operations/: elementwise.cpp
MLCore/src/mlcore/operations/broadcast/: broadcast.cpp
MLCore/src/mlcore/tensor/: tensor.cpp
MLCore/src/mlcore/utils/: shape.cpp
MLTests/: CMakeLists.txt  test_main.cpp
MLTests/autograd/: dummyGradFn.h  gradFnTests.cpp  gradUtilsTests.cpp
MLTests/autograd/functions/: activationGradTests.cpp  broadcastGradTests.cpp  elementwiseGradTests.cpp  linAlgGradTests.cpp  lossGradTests.cpp  reductionGradTests.cpp  scalarGradTests.cpp
MLTests/operations/: activationTests.cpp  broadcastTests.cpp  elementwiseTests.cpp  linAlgTests.cpp  lossTests.cpp  reductionTests.cpp  scalarTests.cpp
MLTests/tensor/: tensorTests.cpp
MLTests/utils/: shapeTests.cpp
(+10 files in other folders)
